[package]
edition = "2021"
name = "bun-crypto"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
age = "0.9.2"
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"

[build-dependencies]
napi-build = "2.0.1"

# optimize for size
[profile.release]
strip = true
lto = true
opt-level = "z"
debug = 0
overflow-checks = false
panic = "abort"
codegen-units = 1
