[package]
edition = "2021"
name = "bun-crypto"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
age = "0.10.0"
hmac-sha512 = "1.1.5"
napi = { version = "2.16.0", default-features = false, features = ["napi4"] }
napi-derive = "2.16.0"

[build-dependencies]
napi-build = "2.1.2"

# optimize for size
[profile.release]
strip = true
lto = true
opt-level = "z"
debug = 0
overflow-checks = false
panic = "abort"
codegen-units = 1
